# pluginVolcano_sdl

./: CMakeLists.txt  file_list_gen.cmake  project.xml
main/: main.c  ui.c  ui.h
main/components/: arc_humidity.c  arc_humidity.h  arc_luminosidade.c  arc_luminosidade.h  chart_temperatura.c  chart_temperatura.h  humidity.c  humidity.h  thermometer.c  thermometer.h
main/images/: embtech_img.c  humidity_icon.c  plugin_img1.c  plugin_img2.c  thermometer_data.c  volcano1.c  volcano2.c
main/pages/: charts.c  charts.h  plugin.c  plugin.h  volcano.c  volcano.h
main/screens/principal/: principal_gen.c  principal_gen.h
